# orophilia-crawler

./: .env  .gitignore  README.md  cli.py  crawler.py  pyproject.toml
cli/: peaks.py
crawler/: 0_download.py  1_mutate_and_upload.py  2_regions.py  3_peaks_per_regions.py  4_all_routes_to_a_peak.py  5_the_parking_spot_study.py  models.py  overpass.py
geo/: export.geojson  karwendel.json
peaks_and_tracks_initializer/: config.py
peaks_and_tracks_initializer/data/: elevation.py  models.py  overpass.py
peaks_and_tracks_initializer/data/lib/: README.md
peaks_and_tracks_initializer/data/persistence/: abstract_store.py  supabase.py
peaks_and_tracks_initializer/ingestion/: __init_.py  ingestion_controller.py
peaks_and_tracks_initializer/ingestion/peaks/: peak_in_region.query  peak_ingestion.py  peak_utils.py
peaks_and_tracks_initializer/ingestion/points_of_interest/: alpine_huts.py  parking_spots.py  points_of_interest_utils.py  way_around_node_search.query
peaks_and_tracks_initializer/ingestion/regions/: regions.py  regions.query
peaks_and_tracks_initializer/ingestion/routes/: routes.py  routes_utils.py
query/: get_alpine_huts_near_mountain.query  get_parking_spots_near_mountain.query  karwendel.query  peak_in_region.query
tests/peaks_and_track_initializere/data/: test_elevation.py
tests/peaks_and_track_initializere/ingestion/: test_ingestion_controller.py
tests/peaks_and_track_initializere/ingestion/points_of_interest/: test_points_of_interest_utils.py
tests/peaks_and_track_initializere/ingestion/routes/: test_routes.py
